# paxi_bot

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
paxi_ws/: Left_wheel.csv  frames_2025-11-26_13.36.25.gv  frames_2025-11-26_15.47.45.gv  frames_2026-01-29_22.04.15.gv  frames_2026-01-30_23.24.18.gv  right_wheel.csv
paxi_ws/.devcontainer/: Dockerfile  devcontainer.json
paxi_ws/src/: paxi.repos
paxi_ws/src/hardware/: package.xml
paxi_ws/src/launch_paxi_controller/: package.xml  setup.cfg  setup.py
paxi_ws/src/launch_paxi_controller/controller/: paxi_controller.yaml
paxi_ws/src/launch_paxi_controller/launch_paxi_controller/: launch_controller.py
paxi_ws/src/launch_paxi_controller/urdf/: paxi_bot.urdf  paxi_bot_gazebo.urdf
paxi_ws/src/paxi_bag_to_csv/: package.xml  setup.cfg  setup.py
paxi_ws/src/paxi_bag_to_csv/paxi_bag_to_csv/: bag2csv.py  bag_to_csv_pandas.py
paxi_ws/src/paxi_bringup/: ToDo.txt  package.xml  setup.cfg  setup.py
paxi_ws/src/paxi_bringup/paxi_bringup/: __init__.py  camera_oak_d_lite.py  controller.py  data_collection.py  ign_gazebo.py  imu_test.py  live_async_mapping.py  live_display.py  live_mapping_display.py  main_bringup.py  main_bringup_debug.py  manual_control.py  nav2.py  nav2_map.py  paxi_display.py  paxi_nav2.py  rviz_nav2.py  static_display.py
paxi_ws/src/paxi_bringup/test/: test_copyright.py  test_flake8.py
paxi_ws/src/paxi_calibrate/: CMakeLists.txt  package.xml
paxi_ws/src/paxi_calibrate/src/: calibrate.cpp  calibrate_calculations.cpp  calibrate_csv_generator.cpp  calibrate_node.cpp  calibrate_process.cpp  calibrate_subscriber.cpp  calibrate_test.cpp  calibrate_twist_pub.cpp
paxi_ws/src/paxi_camera/: CMakeLists.txt  package.xml
paxi_ws/src/paxi_camera/include/paxi_camera/: camera_node.hpp
paxi_ws/src/paxi_camera/src/: camera.cpp  camera_node.cpp
paxi_ws/src/paxi_common/: CMakeLists.txt  package.xml
paxi_ws/src/paxi_common/include/paxi_common/: calibrate_logger_names.hpp  camera_topic_names.hpp  hardware_logger_names.hpp  hardware_topic_names.hpp  math.hpp  math_constants.hpp  paxi_ccommon.hpp  paxi_common.hpp  utils.hpp  visual_odom_topic_names.hpp
paxi_ws/src/paxi_data_analysis/: package.xml  setup.cfg  setup.py
paxi_ws/src/paxi_data_analysis/config/: paxi_bag_path_info.yaml
paxi_ws/src/paxi_data_analysis/paxi_data_analysis/: calculate_gyro_bias.py  find_inertial_properties_link.py  lin_reg_node.py  linear_regression.py  main.py  pose_comparison.py
paxi_ws/src/paxi_data_analysis/test/: test_flake8.py
paxi_ws/src/paxi_data_collection/: CMakeLists.txt  package.xml
paxi_ws/src/paxi_data_collection/example_yaml/: test_paxi_data_collection.yaml
paxi_ws/src/paxi_data_collection/include/paxi_data_collection/: hardware_bag.hpp
paxi_ws/src/paxi_data_collection/src/: data_collection.cpp  hardware_bag.cpp  paxi_data_collection_parameters.yaml
paxi_ws/src/paxi_description/: CMakeLists.txt  package.xml
paxi_ws/src/paxi_description/config/: nav2_costmap.yaml  nav2_ekf _camera_added.yaml  nav2_ekf.yaml  nav2_ekf_all_imu.yaml  nav2_ekf_just_hover.yaml  nav2_ekf_live_mapping.yaml  nav2_params.yaml  paxi_bot.rviz  slam_params.yaml
paxi_ws/src/paxi_description/controller/: controller.yaml  paxi_controller.yaml  paxi_controller_calibrate.yaml  paxi_controller_sim.yaml
paxi_ws/src/paxi_description/data_collection/: paxi_data_collection.yaml
paxi_ws/src/paxi_description/maps/: feb_26_room_hallway.pgm  feb_26_room_hallway.xcf  feb_26_room_hallway.yaml  feb_4_room_and_hallway.pgm  feb_4_room_and_hallway.xcf  feb_4_room_and_hallway.yaml  hotspot_test_april_4_2026.pgm  hotspot_test_april_4_2026.yaml  mapping_test_jan29_2026.pgm  mapping_test_jan29_2026.yaml  mapping_test_jan29_2026_edited.pgm  mapping_test_jan29_2026_edited.xcf  my_map_feb_13_2024.pgm  my_map_feb_13_2024.yaml  my_mappers_test.pgm  my_mappers_test.yaml  my_room_and_hallway_feb3.pgm  my_room_and_hallway_feb3.xcf  my_room_and_hallway_feb3.yaml  my_room_feb1.pgm  my_room_feb1.yaml  my_room_jan_30.pgm  my_room_jan_30.yaml  (+8 more)
paxi_ws/src/paxi_gazebo/: CMakeLists.txt  package.xml
paxi_ws/src/paxi_hardware/: CMakeLists.txt  package.xml  paxi_export_plugin_description.xml  paxi_hardware.xml
paxi_ws/src/paxi_hardware/include/paxi_hardware/: encoder.hpp  hardware_fsm.hpp  hardware_manager.hpp  hardware_state.hpp  hardware_worker.hpp  hoverboard_protocol.hpp  hoverboard_protocol_struct.hpp  imu.hpp  paxi_interface.hpp  paxi_interface_node.hpp  protocol_worker.hpp  serial_communication.hpp  serial_port.hpp  utility.hpp
paxi_ws/src/paxi_hardware/src/: encoder.cpp  hardware_fsm.cpp  hardware_manager.cpp  hardware_state.cpp  hardware_worker.cpp  hoverboard_protocol.cpp  imu.cpp  paxi_interface.cpp  paxi_interface_node.cpp  protocol_worker.cpp  serial_communication.cpp  serial_port.cpp
paxi_ws/src/paxi_hardware/test/: encoder_test.cpp  imu_test.cpp  main_test.cpp  paxi_interface_node_test.cpp  serial_port_test.cpp
paxi_ws/src/paxi_hardware/test/include/test/: encoder_test.hpp  hoverboard_protocol_struct_test.hpp  imu_test.hpp  paxi_interface_node_test.hpp  serial_port_test.hpp
paxi_ws/src/paxi_msgs/: CMakeLists.txt  package.xml
paxi_ws/src/paxi_nav2/: nav2_param.yaml  package.xml  setup.cfg  setup.py  slam_tool_box.yaml
paxi_ws/src/paxi_nav2/paxi_nav2/: launch_paxi_description.py
paxi_ws/src/paxi_nav2/paxi_nav2/launch/: launch_nav2.py  launch_paxi_description.py
paxi_ws/src/paxi_nav2/test/: test_copyright.py  test_flake8.py  test_pep257.py
scripts/: add_udev_oak_d_lite_camera  add_udev_oak_d_lite_camera.sh  add_udev_prolific_usb.sh  build.sh  colcon_build_with_test_ignore_from_other_repos.sh  compare_imu.sh  cppcheck_slow_version.sh  cpplint_check.sh  debug_sensors_script.sh  install_depthai_on_jetson.sh  link_ws_compile_commands_to_vs_code.sh  live_mapping_launch.bash  live_mapping_launch.sh  nav2_launch_on_robot.sh  paxi_dependencies.bash  paxi_dependencies.sh  paxi_mapping_launch.bash  reformat_repo_to_ros_standards.sh  save_nav2_map.sh  tmux_launch.sh  valgrind_check_memory_leak.sh
scripts/files/: tmux_launch_files
(+41 files in other folders)
