<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>paxi_hardware</name>
  <version>0.0.0</version>
  <description>Describes robot hardware for the PaxiBot</description>
  <maintainer email="thejacobcohen@gmail.com">j</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>rclcpp_lifecycle</buildtool_depend>
       
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>hardware_interface</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>gtest_vendor</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
